# sample-s3-batch-checksum-validation

./: .gitignore  .pre-commit-config.yaml  LICENSES.txt  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt
.github/workflows/: security-scan.yml
docs/: README.md
infrastructure/: app.py  cdk-nag-config.json  cdk.json
infrastructure/stacks/: s3_batch_checksum_stack.py
lambda_functions/checksum_initiator/src/: lambda_function.py
lambda_functions/checksum_results_processor/: requirements.txt
lambda_functions/checksum_results_processor/src/: lambda_function.py
lambda_functions/object_tagger/src/: lambda_function.py
scripts/: README.md  deploy.sh  run-cdk-nag.sh  setup-dev.sh  test.sh
scripts/s3-tools/: README.md
scripts/s3-tools/batch-operations/: s3_batch_input_generator  s3_batch_input_generator.py
scripts/s3-tools/synthetic-data/: generate_synthetic_dataset.py  setup_synthetic_data.sh  test_synthetic_integration.py  validate_dataset.py
tests/: README.md  __init__.py  test_checksum_initiator.py  test_checksum_results_processor.py  test_integration.py  test_object_tagger.py
tests/s3-tools/: __init__.py  conftest.py  test_generate_synthetic_dataset.py  test_integration.py  test_s3_batch_input_generator.py  test_validate_dataset.py
